# bytescript

./: .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc.cjs  CONTRIBUTING.md  README.md  extension.cjs  langium-config.json  langium-quickstart.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  web-test-runner.config.js  web-test-runner.config.mjs
.github/: FUNDING.yml
.github/workflows/: ethicalcheck.yml  test.yml
compiler/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bsc.vcxproj  bsc.vcxproj.filters  build.bat  build.sh  clean.bat  clean.sh  colors.bat  compiler.sln  compiler.vcxproj  main.cpp
compiler/src/: CMakeLists.txt
docs/compiler/cli/: cli.md
docs/compiler/lexer/keywords/: keywords.md  keywords.txt
examples/: st.d.ts  tsconfig.json
examples/basic/: hello.ts  main.ts  mixed-valid-invalid-code.ts  package.json  poc1.ts  valid-code.ts  valid-should-be-invalid.ts  with-invalid-code.ts
logo/: README.md
ref/: ReservedWords.txt
src/: ast.ts  extension.ts  index.ts  parser.ts  range.ts  scope.ts  visitor.ts
src/cli/: README.md  bsc.ts  cli-util.ts  generator.ts  index.ts
src/language-server/: bytescript-module.ts  bytescript-scope.ts  bytescript-validator.ts  bytescript.langium  hello-world.langium  main.ts  whacko.langium
src/language-server/types/: descriptions.ts  resolver.ts  types.ts
syntaxes/: hello-world.tmLanguage.json
tests/browser/: test.ts
tests/node/: test.mjs
(+2 files in other folders)
